# advent_of_code

./: .pre-commit-config.yaml  README.md  day01.py  day02_product_ranges.py  day03.py  day03_battery_arrays.py  day04.py  day05_fresh_ingredients.py  day06_cephalopod_math.py  day07_tachyon_manifold.py  pyproject.toml
aoc/aoc2025/: day01_rotation_dial.py  day02_product_ranges.py  day08_junktion_boxes.py
code/: day02_product_ranges.py  day03_battery_arrays.py  day06_cephalopod_math.py  day07_tachyon_manifold.py
code/2025/: day01_rotation_dial.py  day04_forklift_paperrolls.py  day05_fresh_ingredients.py  day08_junktion_boxes.py
data/: input01_test.txt  input03_puzzle.txt  input05_puzzle.txt  input09_test2.txt
data/2025/: input01_puzzle.txt  input04_puzzle.txt  input06_puzzle.txt  input06_test.txt  input07_puzzle.txt
notebooks/: notebook_09_tiles_biggest_rectangle.ipynb  notebook_10_machines_indicators_joltajes.ipynb  notebook_11_server_rack_nodes.ipynb
tests/aoc2025/: test_day01_rotation_dial.py  test_day02_product_ranges.py
