[project]
name = "advent_of_code_2025"
version = "0.1.0"
description = "Advent of Code 2025"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.12.0",
    "ipykernel>=7.1.0",
    "isort>=7.0.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "tqdm>=4.67.1",
]
